# Loan-Approval

./: GUI.ipynb  README.md
PythonProject/: gui.py  main.py  nohup.out  pyproject.toml  testPredictions.csv  train.csv
